<resources>
    <string name="app_name" translatable="false">Hextech Simulator</string>
    <string name="aatrox_skin2">Meka Aatrox</string>
    <string name="aatrox_skin1">Adalet Işığı Aatrox</string>
    <string name="aatrox_skin3">Denizlerin Avcısı Aatrox</string>
    <string name="aatrox_skin4">Kanlı Ay Aatrox</string>
    <string name="ahri_skin1">Hanedan Ahri</string>
    <string name="ahri_skin2">Geceyarısı Ahri</string>
    <string name="ahri_skin3">Tilki Ateşi Ahri</string>
    <string name="ahri_skin4">Popstar Ahri</string>
    <string name="ahri_skin5">Gözüpek Ahri</string>
    <string name="ahri_skin6">Okullu Ahri</string>
    <string name="ahri_skin7">Arcade Ahri</string>
    <string name="ahri_skin8">Yıldız Muhafızı Ahri</string>
    <string name="ahri_skin9">K/DA Ahri</string>
    <string name="akali_skin1">Deşergeçer Akali</string>
    <string name="akali_skin2">Zebani Akali</string>
    <string name="akali_skin3">Fırtına Forvet Akali</string>
    <string name="akali_skin4">Hemşire Akali</string>
    <string name="akali_skin5">Kanlı Ay Akali</string>
    <string name="akali_skin6">Gümüşdiş Akali</string>
    <string name="akali_skin7">Kelle Avcısı Akali</string>
    <string name="akali_skin8">Suşici Akali</string>
    <string name="akali_skin9">K/DA Akali</string>
    <string name="alistar_skin1">Kara Alistar</string>
    <string name="alistar_skin2">Altın Alistar</string>
    <string name="alistar_skin3">Matador Alistar</string>
    <string name="alistar_skin4">Uzunboynuz Alistar</string>
    <string name="alistar_skin5">Zincirkıran Alistar</string>
    <string name="alistar_skin6">Zebani Alistar</string>
    <string name="alistar_skin7">Libero Alistar</string>
    <string name="alistar_skin8">Yağmacı Alistar</string>
    <string name="alistar_skin9">SKT T1 Alistar</string>
    <string name="alistar_skin10">Mö Mö Alistar</string>
    <string name="alistar_skin11">Hextech Alistar</string>
    <string name="amumu_skin1">Firavun Amumu</string>
    <string name="amumu_skin2">Vancouver\'lı Amumu</string>
    <string name="amumu_skin3">Emumu</string>
    <string name="amumu_skin4">İade Hediye Amumu</string>
    <string name="amumu_skin5">Balo Mağduru Amumu</string>
    <string name="amumu_skin6">Küçük Şövalye Amumu</string>
    <string name="amumu_skin7">Hüzünlü Robot Amumu</string>
    <string name="amumu_skin8">Parti Canavarı Amumu</string>
    <string name="amumu_skin9">Zebani Amumu</string>
    <string name="anivia_skin1">Takım Ruhu Anivia</string>
    <string name="anivia_skin2">Yırtıcı Kuş Anivia</string>
    <string name="anivia_skin3">Noxus Avcısı Anivia</string>
    <string name="anivia_skin4">Hextech Anivia</string>
    <string name="anivia_skin5">Kara Buz Anivia</string>
    <string name="anivia_skin6">Tarih Öncesi Anivia</string>
    <string name="anivia_skin7">Karnaval Anivia</string>
    <string name="annie_skin1">Gotik Annie</string>
    <string name="annie_skin2">Kırmızı Başlıklı Annie</string>
    <string name="annie_skin3">Annie Harikalar Diyarı\'nda</string>
    <string name="annie_skin4">Balo Kraliçesi Annie</string>
    <string name="annie_skin5">Buz Ateşi Annie</string>
    <string name="annie_skin6">Ters Annie</string>
    <string name="annie_skin7">Franken Tibbersştayn Annie</string>
    <string name="annie_skin8">Panda Annie</string>
    <string name="annie_skin9">Çocuk Kalbi Annie</string>
    <string name="annie_skin10">Hextech Annie</string>
    <string name="annie_skin11">Süper Galaksi Annie</string>
    <string name="ashe_skin1">Freljord\'lu Ashe</string>
    <string name="ashe_skin2">Sherwood\'lu Ashe</string>
    <string name="ashe_skin3">Yabanotu Ashe</string>
    <string name="ashe_skin4">Kraliçe Ashe</string>
    <string name="ashe_skin5">Ametist Ashe</string>
    <string name="ashe_skin6">Gönül Avcısı Ashe</string>
    <string name="ashe_skin7">Yağmacı Ashe</string>
    <string name="ashe_skin8">KOD ADI: Ashe</string>
    <string name="ashe_skin9">Şampiyonlar Şampiyonu Ashe</string>
    <string name="ashe_skin10">Kozmik Kraliçe Ashe</string>
    <string name="aurelion_skin1">Alevlerin Hâkimi Aurelion Sol</string>
    <string name="aurelion_skin2">Meka Aurelion Sol</string>
    <string name="azir_skin1">Galaktik Azir</string>
    <string name="azir_skin2">Ölülerin Efendisi Azir</string>
    <string name="azir_skin3">SKT T1 Azir</string>
    <string name="azir_skin4">Savaş Ustası Azir</string>
    <string name="bard_skin1">Ağaç Ata Bard</string>
    <string name="bard_skin2">Kartopu Savaşı Bard</string>
    <string name="bard_skin3">Ozan Bard</string>
    <string name="blitzcrank_skin1">Paslı Blitzcrank</string>
    <string name="blitzcrank_skin2">Kaleci Blitzcrank</string>
    <string name="blitzcrank_skin3">Pata Küte Blitzcrank</string>
    <string name="blitzcrank_skin4">Yolların Kralı Blitzcrank</string>
    <string name="blitzcrank_skin5">Ben de İnsanım Blitzcrank</string>
    <string name="blitzcrank_skin6">iBlitzcrank</string>
    <string name="blitzcrank_skin7">Riot Blitzcrank</string>
    <string name="blitzcrank_skin8">Jeton Düşmanı Blitzcrank</string>
    <string name="blitzcrank_skin9">İsyan Mızrağı Blitzcrank</string>
    <string name="blitzcrank_skin10">Erdem Mızrağı Blitzcrank</string>
    <string name="brand_skin1">Kıyamet Ateşi Brand</string>
    <string name="brand_skin2">Vandal Brand</string>
    <string name="brand_skin3">Buz Alevi Brand</string>
    <string name="brand_skin4">Zombi Brand</string>
    <string name="brand_skin5">Ruh Ateşi Brand</string>
    <string name="brand_skin6">Jeton Düşmanı Brand</string>
    <string name="braum_skin1">Ejderkatili Braum</string>
    <string name="braum_skin2">Ringlerin Kaplanı Braum</string>
    <string name="braum_skin3">Aslan Yürekli Braum</string>
    <string name="braum_skin4">Braum Baba</string>
    <string name="braum_skin5">Mafya Braum</string>
    <string name="caitlyn_skin1">Direnişçi Caitlyn</string>
    <string name="caitlyn_skin2">Şerif Caitlyn</string>
    <string name="caitlyn_skin3">Safarici Caitlyn</string>
    <string name="caitlyn_skin4">Kutup Savaşçısı Caitlyn</string>
    <string name="caitlyn_skin5">Aynasız Caitlyn</string>
    <string name="caitlyn_skin6">Kelle Avcısı Caitlyn</string>
    <string name="caitlyn_skin7">Ay İfriti Caitlyn</string>
    <string name="caitlyn_skin8">Pulsefire Caitlyn</string>
    <string name="caitlyn_skin9">Havuz Partisi Caitlyn</string>
    <string name="camille_skin1">Robotik Camille</string>
    <string name="camille_skin2">Cadılar Meclisi Camille</string>
    <string name="cass_skin1">Haydut Cassiopeia</string>
    <string name="cass_skin2">Siren Cassiopeia</string>
    <string name="cass_skin3">Mitolojik Cassiopeia</string>
    <string name="cass_skin4">Yeşim Diş Cassiopeia</string>
    <string name="cass_skin5">Eternum Cassiopeia</string>
    <string name="cho_skin1">Kâbus Cho\'Gath</string>
    <string name="cho_skin2">Beyefendi Cho\'Gath</string>
    <string name="cho_skin3">Göl Canavarı Cho\'Gath</string>
    <string name="cho_skin4">Müzelik Cho\'Gath</string>
    <string name="cho_skin5">Savaş Makinesi Cho\'Gath</string>
    <string name="cho_skin6">Tarih Öncesi Cho\'Gath</string>
    <string name="cho_skin7">Sonsuz Karanlık Cho\'Gath</string>
    <string name="corki_skin1">UFO Corki</string>
    <string name="corki_skin2">Buz Kızaklı Corki</string>
    <string name="corki_skin3">Kızıl Baron Corki</string>
    <string name="corki_skin4">Özel Yapım Corki</string>
    <string name="corki_skin5">Urf Pilotu Corki</string>
    <string name="corki_skin6">Ejderkanat Corki</string>
    <string name="corki_skin7">Fnatic Corki</string>
    <string name="corki_skin8">Arcade Corki</string>
    <string name="darius_skin1">Lord Darius</string>
    <string name="darius_skin2">Biyozırhlı Darius</string>
    <string name="darius_skin3">Cesur Yürek Darius</string>
    <string name="darius_skin4">Potanın Kralı Darius</string>
    <string name="darius_skin5">Okullu Darius</string>
    <string name="darius_skin6">Dehşet Yıldızı Darius</string>
    <string name="darius_skin7">Yüce Kral Darius</string>
    <string name="diana_skin1">Kara Valkyrie Diana</string>
    <string name="diana_skin2">Ay Tanrıçası</string>
    <string name="diana_skin3">Zebani Diana</string>
    <string name="diana_skin4">Kanlı Ay Diana</string>
    <string name="diana_skin5">Denizlerin Belası Diana</string>
    <string name="drmundo_skin1">Zehirli Dr.Mundo</string>
    <string name="drmundo_skin2">Mundo Vücut Şampiyonu</string>
    <string name="drmundo_skin3">İşadamı Mundo</string>
    <string name="drmundo_skin4">Mundo Mundo</string>
    <string name="drmundo_skin5">Cellat Mundo</string>
    <string name="drmundo_skin6">Deli Balta Mundo</string>
    <string name="drmundo_skin7">TPA Mundo</string>
    <string name="drmundo_skin8">Havuz Partisi Mundo</string>
    <string name="drmundo_skin9">Yaman Sıklet Mundo</string>
    <string name="drmundo_skin10">Buz Prensi Mundo</string>
    <string name="draven_skin1">Ruh Söken Draven</string>
    <string name="draven_skin2">Gladyatör Draven</string>
    <string name="draven_skin3">Yorumcu Draven</string>
    <string name="draven_skin4">Havuz Partisi Draven</string>
    <string name="draven_skin5">Canavar Avcısı Draven</string>
    <string name="draven_skin6">Draven Draven</string>
    <string name="draven_skin7">Draven Baba</string>
    <string name="ekko_skin1">Kum Fırtınası Ekko</string>
    <string name="ekko_skin2">Okullu Ekko</string>
    <string name="ekko_skin3">KOD ADI: Ekko</string>
    <string name="ekko_skin4">SKT T1 Ekko</string>
    <string name="ekko_skin5">Şeker Hırsızı Ekko</string>
    <string name="elise_skin1">Ölüm Çiçeği Elise</string>
    <string name="elise_skin2">Şanlı Elise</string>
    <string name="elise_skin3">Kanlı Ay Elise</string>
    <string name="elise_skin4">SKT T1 Elise</string>
    <string name="elise_skin5">Süper Galaksi Elise</string>
    <string name="evelynn_skin1">Gölge Evelynn</string>
    <string name="evelynn_skin2">Maskeli Evelynn</string>
    <string name="evelynn_skin3">Tangocu Evelynn</string>
    <string name="evelynn_skin4">Kasa Hırsızı Evelynn</string>
    <string name="evelynn_skin5">Kanlı Ay Evelynn</string>
    <string name="evelynn_skin6">K/DA Evelynn</string>
    <string name="ezreal_skin1">Nottingham\'lı Ezreal</string>
    <string name="ezreal_skin2">Şimşek Santrfor Ezreal</string>
    <string name="ezreal_skin3">Buzul Ezreal</string>
    <string name="ezreal_skin4">Kâşif Ezreal</string>
    <string name="ezreal_skin5">Pulsefire Ezreal</string>
    <string name="ezreal_skin6">TPA Ezreal</string>
    <string name="ezreal_skin7">Kazanova Ezreal</string>
    <string name="ezreal_skin8">Maça Ası Ezreal</string>
    <string name="ezreal_skin9">Arcade Ezreal</string>
    <string name="ezreal_skin10">Yıldız Muhafızı Ezreal</string>
    <string name="ezreal_skin11">SSG Ezreal</string>
    <string name="ezreal_skin12">Pijamalı Muhafız Ezreal</string>
    <string name="fidd_skin1">Hayalet Fiddlesticks</string>
    <string name="fidd_skin2">İngiliz Fiddlesticks</string>
    <string name="fidd_skin3">Eşkıya Fiddlesticks</string>
    <string name="fidd_skin4">Balkabağı Fiddlesticks</string>
    <string name="fidd_skin5">Tahtabacak Fiddlesticks</string>
    <string name="sys_evet">Evet</string>
    <string name="sys_hayir">Hayır</string>
    <string name="sys_ok">Tamam</string>
    <string name="sys_test">Deneme</string>
    <string name="sys_errorcode">Hata Kodu</string>
    <string name="sys_hatali_veri">Hatalı Veri</string>
    <string name="popup_yeniden_isle">Yeniden İşle</string>
    <string name="popup_yeniden_isle_aciklama">ve rasgele Kalıcı Kostüm edin.</string>
    <string name="popup_ayristir">Ayrıştır</string>
    <string name="popup_ayristir_aciklama">ve Öz edin</string>
    <string name="popup_gelistir">Geliştir</string>
    <string name="popup_gelistir_aciklama">ve Kalıcı Kostüm edin</string>
</resources>