<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:src="@mipmap/icon_question" />

    <TextView
        android:id="@+id/dialog_yesno_text_mesaj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/friz"
        android:text="@string/sys_test"
        android:textAlignment="center"
        android:textColor="@color/colorGreyBronz"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_buton_yes"
            style="?android:buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/friz"
            android:text="@string/sys_evet"
            android:textColor="@color/colorGoldYellow" />

        <Button
            android:id="@+id/dialog_buton_no"
            style="?android:buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/friz"
            android:text="@string/sys_hayir"
            android:textColor="@color/colorGoldYellow" />
    </LinearLayout>

</LinearLayout>