<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background_error"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:src="@mipmap/icon_error" />

    <TextView
        android:id="@+id/dialog_error_text_mesaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/friz"
        android:text="@string/sys_test"
        android:textColor="@color/colorGreyBronz"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_error_tag_errorcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="12sp"
            android:fontFamily="@font/friz"
            android:textColor="@color/colorFrameGoldEnd"
            android:text="@string/sys_errorcode"/>

        <TextView
            android:id="@+id/dialog_error_text_errorcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:fontFamily="@font/friz"
            android:text="@string/sys_test"
            android:textColor="@color/colorFrameGoldEnd"
            android:textSize="12sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_error_buton_ok"
            style="?android:buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/friz"
            android:text="@string/sys_ok"
            android:textColor="@color/colorGoldYellow" />
    </LinearLayout>

</LinearLayout>