<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_envanter_itemclick"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_envanter_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/popup_layer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/popup_envanter_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_margin="10dp"
            android:fontFamily="@font/chaparralbold"
            android:text="@string/sys_hatali_veri"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

        <TextView
            android:id="@+id/popup_envanter_samp_mevcut_degil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textAlignment="textEnd"
            android:background="@drawable/popup_not_available"
            android:padding="10dp"
            android:text="@string/sys_hatali_veri"
            android:textColor="@color/colorGreyBronz" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/popup_envanter_item_genel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/sys_hatali_veri"
            android:textColor="@color/colorGreyBronz" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPopupEnvanterFrame" />

    <LinearLayout
        android:id="@+id/popup_layer_yeniden_isle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/icon_yeniden_isle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/chaparralbold"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/popup_yeniden_isle"
            android:textColor="@color/popupActive" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/chaparralregular"
            android:gravity="center"
            android:text="@string/popup_yeniden_isle_aciklama"
            android:textColor="@color/popupActive"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/popup_layer_ayristir"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="start">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/icon_ayristir" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/chaparralbold"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/popup_ayristir"
                android:textColor="@color/popupActive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/chaparralregular"
                android:gravity="center"
                android:text="@string/popup_ayristir_aciklama"
                android:textColor="@color/popupActive"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <TextView
                android:id="@+id/popup_envanter_ayristir_oz"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/friz"
                android:gravity="end"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="9999"
                android:textAlignment="textEnd"
                android:textColor="@color/colorGreyBronz"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/popup_envanter_ayristir_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@mipmap/icon_to" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/popup_layer_gelistir"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="start">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_gelistir" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/chaparralbold"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/popup_gelistir"
                android:textColor="@color/popupActive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/chaparralregular"
                android:gravity="center"
                android:text="@string/popup_gelistir_aciklama"
                android:textColor="@color/popupActive"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:id="@+id/popup_envanter_gelistir_oz"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/friz"
                android:gravity="end"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="9999"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/popup_envanter_gelistir_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@mipmap/icon_to" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>